# homework-10-1

./: .flake8  README.md  pyproject.toml
src/: masks.py  processing.py  widget.py
