[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Mikhail Kuznetsov <k9140707193@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"

[flake8]
max-line-length = 119
ignore = "E501"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
